<resources>
    <string name="app_name">CityGrocer</string>
    <string name="facebook_app_id">1556011511118517</string>
    <string name="error_no_internet">Please check your internet connection!</string>
    <string name="empty_result">No data found</string>
    <string name="error_something_wrong">Sorry! Something went wrong</string>
    <string name="login_with_registered_mobile">Log in using your registered email or mobile number.</string>
    <string name="emil_mobile">Email or mobile</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_to_app">New to CityGrocer?</string>
    <string name="register">Register</string>
    <string name="fill_form_to_register">Fill up the below form to register</string>
    <string name="first_name">First Name*</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number*</string>
    <string name="set_password">Set your password*</string>
    <string name="referral_code">Referral code</string>
    <string name="email_address">Email address*</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="create_account">Create Account</string>
    <string name="you_agree">By creating account, you agree to our</string>
    <string name="terms_service">Terms of services</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="enter_otp">Enter the 4-digit OTP sent to your mobile number</string>
    <string name="submit">Submit</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="edit">Edit</string>
    <string name="not_your_number">Not your mobile number?</string>
    <string name="enter_mobile_email_to_reset_password">Enter your registered email or mobile number \nto reset your password</string>
    <string name="next">Next</string>
    <string name="back_to_login">Back To Login</string>
    <string name="sent_verification_code">We have sent a verification code, \nplease enter it to complete the verification.</string>
    <string name="enter_code">Enter code</string>
    <string name="resend_code">Resend Code</string>
    <string name="continue_verification">Continue</string>
    <string name="set_new_password">Set new password</string>
    <string name="re_enter_password">Re-enter new password</string>
    <string name="congratulations">Congratulations!</string>
    <string name="password_reset_success">Password has been reset successfully.</string>
    <string name="logn_register_using_social">Log in/Register using your social media account</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="or_use_email">or use your email address</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_">Welcome!</string>
    <string name="guest">Guest!</string>
    <string name="login_register">Log in / Register</string>
    <string name="your_location">Your Location</string>
    <string name="got_it">Got It</string>
    <string name="change_location">If it\'s not your location, you may \nchange it.</string>
    <string name="please_set_new_password">Please set a new password to fill up the form below</string>
    <string name="registered_success">You are successfully registered.</string>
    <string name="become_cg_member">Become CG Member ></string>
    <string name="offers_zone">Offers Zone</string>
    <string name="header">Header</string>
    <string name="view_all">View All</string>
    <string name="deal_of_day">Deal of The Day</string>
    <string name="orders">Orders</string>
    <string name="my_shop">My Shop</string>
    <string name="contact_us">Contact us</string>
    <string name="save_amount">SAVE</string>
    <string name="amount">\n\u20B918</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="more_offers_with_this_item">More Offers With This Item</string>
    <string name="_230_items">0</string>
    <string name="sort">SORT</string>
    <string name="filter">FILTER BY</string>
    <string name="filter1">FILTER</string>
    <string name="sort_by">SORT BY</string>
    <string name="available_size">Available size options for</string>
    <string name="popularity">Popularity</string>
    <string name="alphabetical">Alphabetical</string>
    <string name="low_to_high">Price - low to high</string>
    <string name="high_to_low">Price - high to low</string>
    <string name="discount_high_to_low">Discount% - high to low</string>
    <string name="clear_all">Clear All</string>
    <string name="apply">Apply</string>
    <string name="brand">Brand</string>
    <string name="size">Pack Size</string>
    <string name="discount">Discount %</string>
    <string name="price">Price</string>
    <string name="food_preference">Food Preference</string>
    <string name="search_for_brand">Search for Brand</string>
    <string name="save">SAVE</string>
    <string name="garnier_ultra_blends_revitalizing_shampoo_5_precious_herbs_free_conditioner_75ml">Garnier\nUltra Blends Revitalizing Shampoo 5 Precious Herbs\n(Free Conditioner 75ml)</string>
    <string name="text">Cheese Bakes - with Herbs Light\n&amp; Crunchy (Buy 1 Get 1 Free)</string>
    <string name="about">Amul Ghee is clarified butter that is conventionally prepared from cow\'s milk. It is good source of power and provides vivacity to human body.</string>
    <string name="notify_me">Notify Me</string>
    <string name="popup_notify">We will notify you once the product is\navailable. Thank you!</string>
    <string name="search">Search for products &amp; brands</string>
    <string name="please_wait">Please Wait</string>
    <string name="woops_something_went_wrong">Woops Something Went Wrong</string>
    <string name="err_emailId">Please enter valid emailId</string>
    <string name="err_gender">Please Select Gender</string>
    <string name="err_Mobile">Please enter valid mobile number</string>
    <string name="err_password">Password should not be empty</string>
    <string name="err_password_length">Password should have minimum 4 characters</string>
    <string name="please_enter_first_name">Please Enter First Name</string>
    <string name="please_enter_last_name">Please Enter Last Name</string>
    <string name="err_emailIdOrMobile">Please Enter Valid Mobile Or Email</string>
    <string name="err_otp_empty">OTP should not be empty</string>
    <string name="err_new_password">Please enter new password</string>
    <string name="err_re_password">Please re-enter password</string>
    <string name="your_shopping_cart_is_empty">Your shopping cart is empty</string>
    <string name="shopping_cart_is_empty">Your favourite items are just a click away</string>
    <string name="start_shopping">Start shopping</string>
    <string name="proceed_to_checkout">Proceed to checkout</string>
    <string name="substitutions_to_all">Substitutions to all</string>
    <string name="items_out_of_stock">Items out of stock</string>
    <string name="remove_unavailable_items">Remove unavailable items</string>
    <string name="cart_items">Cart items</string>
    <string name="total">Total:</string>
    <string name="super_saver_membership_plan">Super Saver Membership Plan</string>
    <string name="add">ADD</string>
    <string name="why_become_a_member">Why become a member?</string>
    <string name="see_benefits">See Benefits</string>
    <string name="grocery_staples">Grocery &amp; Staples</string>
    <string name="personal_care">Personal Care</string>
    <string name="last_minute_buys">Last Minute Buys</string>
    <string name="empty_your_cart">Empty your cart?</string>
    <string name="message">Do you want to remove all the items from your cart?</string>
    <string name="cancel">Cancel</string>
    <string name="empty_cart">Empty cart</string>
    <string name="notify">Notify</string>
    <string name="remove">Remove</string>
    <string name="continue_will_remove_the_unavailable_items_from_your_cart">Continue will remove the unavailable items from your cart</string>
    <string name="back_to_cart">BACK TO CART</string>
    <string name="con_tinue">CONTINUE</string>
    <string name="find_similar">FIND SIMILAR</string>
    <string name="similar_products_are_not_available_for_this_item">Similar products are not\navailable for this item</string>
    <string name="similar_products">Similar Products</string>
    <string name="deliver_to">DELIVER TO</string>
    <string name="payment">PAYMENT</string>
    <string name="delivery_slot">DELIVERY SLOT</string>
    <string name="change_slot">CHANGE SLOT</string>
    <string name="change_address">CHANGE ADDRESS</string>
    <string name="cart_mrp_total">Cart MRP Total</string>
    <string name="price_details">PRICE DETAILS</string>
    <string name="cart_price_total">Cart Price Total</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="delivery_token_discount">Delivery Token Discount</string>
    <string name="order_total">Order Total</string>
    <string name="accepted">* Accepted Sodexo Meal Pass for this order</string>
    <string name="add_new_address">ADD NEW ADDRESS</string>
    <string name="cart_discount">Cart Discount</string>
    <string name="edit_address">EDIT ADDRESS</string>
    <string name="remove_address">Remove Address?</string>
    <string name="remove_address_message">Are you sure,you want to remove the selected adress?</string>
    <string name="delete">Delete</string>
    <string name="place_order">Place order</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="redeem_points">Redeem CG Points</string>
    <string name="coupon_discount">Coupon Discount</string>
    <string name="cg_discount">CG Points Discount</string>
    <string name="redem_points">Redeem Points</string>
    <string name="please_register_first">Please register first</string>
    <string name="settle_cg_wallet_balance">Settle CG Wallet Balance</string>
    <string name="net_payable_amount">Net Payable Amount</string>
    <string name="savings">Your Total Savings</string>
    <string name="choose_payment_option">Choose Payment Option</string>
    <string name="pay_online">Pay Online</string>
    <string name="net_banking_paytm_debit_card_credit_card">Net Banking/Paytm/Debit Card/Credit Card</string>
    <string name="pay_on_delivery">Pay On Delivery</string>
    <string name="cash_card_sodexo_meal_pass">Cash/Card/Sodexo Meal Pass</string>
    <string name="yay_your_order_is_placed_successfully">Yay! your order is placed successfully</string>
    <string name="notification_has_been_sent_to_you">Notification has been sent to you.</string>
    <string name="you_total_saved">You Total Saved</string>
    <string name="earned_cg_points">Earned CG Points</string>
    <string name="earned_delivery_tokens">Earned Delivery Tokens</string>
    <string name="visit_home">Visit Home</string>
    <string name="profit_summary">Profit Summary</string>
    <string name="cg_points">CG Points</string>
    <string name="total_active_cg_points">Total Active CG Points</string>
    <string name="use_these_points_to_pay_your_order_amount">Use these points to pay your order amount</string>
    <string name="_1_cg_point_1_00">1 CG Point=\u20B91.00</string>
    <string name="redeem">Redeem</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_shop_by_category">Shop by category</string>
    <string name="menu_my_shop">My shop</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_offers">Offers</string>
    <string name="menu_membership">Membership</string>
    <string name="menu_refer">Refer and Earn</string>
</resources>