<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/layout_header_blank" />
    </android.support.design.widget.AppBarLayout>



    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dimens_15"
        android:layout_marginTop="@dimen/dimens_15"
        android:fontFamily="@font/sourcesanspro_regular"
        android:gravity="center"
        android:text="@string/login_with_registered_mobile"
        android:textColor="@color/colorTextGrey"
        android:textSize="@dimen/dimens_11sp" />


    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_email_mobile"
        style="@style/edittext_style_login"
        android:hint="@string/emil_mobile" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_password"
        style="@style/edittext_style_login"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_40"
        android:layout_margin="@dimen/dimens_15"
        android:background="@drawable/bg_button_curve"
        android:fontFamily="@font/sourcesanspro_bold"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/dimens_14sp" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dimens_15"
        android:layout_marginTop="@dimen/dimens_8"
        android:fontFamily="@font/sourcesanspro_semibold"
        android:text="@string/forgot_password"
        android:textAllCaps="true"
        android:textColor="@color/colorForgotPassword"
        android:textSize="@dimen/dimens_13sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimens_30"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/dimens_8"
            android:fontFamily="@font/sourcesanspro_regular"
            android:text="@string/new_to_app"
            android:textColor="@color/colorTextGrey"
            android:textSize="@dimen/dimens_12sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/sourcesanspro_regular"
            android:text="@string/register"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/dimens_12sp" />
    </LinearLayout>
    </LinearLayout>
</RelativeLayout>