<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/layout_header_blank" />
    </android.support.design.widget.AppBarLayout>


    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dimens_15"
        android:fontFamily="@font/sourcesanspro_regular"
        android:layout_marginTop="@dimen/dimens_15"
        android:text="@string/please_set_new_password"
        android:textColor="@color/colorTextGrey"
        android:textSize="@dimen/dimens_12sp" />


    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_new_pass"
        style="@style/edittext_style_login"
        android:inputType="textPassword"
        android:hint="@string/set_new_password" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_re_pass"
        style="@style/edittext_style_login"
        android:hint="@string/re_enter_password"
        android:inputType="textPassword" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_40"
        android:layout_margin="@dimen/dimens_15"
        android:background="@drawable/bg_button_curve"
        android:text="@string/submit"
        android:fontFamily="@font/sourcesanspro_bold"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/dimens_14sp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>